--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -1,3 +1,66 @@
-<header>
-    NAVBAR
+<header class="bg-purple pt-3 pb-4">
+    <div class="mx-auto w-11/12 lg:w-10/12 max-w-screen-2xl">
+        <div class="grid grid-cols-12 items-center">
+            <div class="col-start-1 col-end-2">
+                <a href="#">
+                    <img src="/images/LaikaMascotas.svg" alt="Logo">
+                </a>
+            </div>
+            <div class="col-start-2 col-end-9">
+                <div class="relative">
+                    <button class="absolute top-1/2 left-2 transform -translate-y-1/2">
+                        <img src="/images/search_icon_mc.svg" alt="search">
+                    </button>
+                    <input class="py-2 px-10 rounded-md w-full focus:outline-none" type="text"
+                        placeholder="¿Qué necesita tu mascota?">
+                </div>
+            </div>
+            <div class="col-start-10 col-end-13">
+                <div class="flex items-center text-white font-bold text-sm justify-between">
+                    <div class="flex items-center cursor-pointer">
+                        <p class="mr-3">Agregar dirección</p>
+                        <img src="/images/arrow_down_custom.svg" alt="arrow down">
+                    </div>
+                    <div class="flex items-center cursor-pointer bg-purple-dark p-2 rounded-md">
+                        <p class="mr-3">Crear cuenta</p>
+                        <img src="/images/arrow_down_custom.svg" alt="arrow down">
+                    </div>
+                    <div class="bg-purple-light rounded-full grid place-items-center p-1 cursor-pointer">
+                        <img src="/images/cart_mc.svg" alt="cart">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </header>
+<nav class="py-1">
+    <div class="mx-auto w-11/12 lg:w-10/12 max-w-screen-2xl">
+        <div class="flex items-center justify-between text-purple font-bold">
+            <div class="flex items-center space-x-6">
+                <div class="flex items-center hover:bg-grey rounded-md pr-2 duration-300 cursor-pointer">
+                    <img src="/images/dog_mc.svg" alt="">
+                    <p class="ml-1 mr-2">Perro</p>
+                    <img class="mt-1" src="/images/punto_de_flecha_a_la_derecha_1.svg" alt="flecha">
+                </div>
+                <div class="flex items-center hover:bg-grey rounded-md pr-2 duration-300 cursor-pointer">
+                    <img src="/images/cat_mc_s.svg" alt="">
+                    <p class="ml-1 mr-2">Gato</p>
+                    <img class="mt-1" src="/images/punto_de_flecha_a_la_derecha_1.svg" alt="flecha">
+                </div>
+                <div class="flex items-center cursor-pointer">
+                    <p class="ml-1 mr-2">Servicios</p>
+                    <img class="mt-1" src="/images/punto_de_flecha_a_la_derecha_1.svg" alt="flecha">
+                </div>
+                <div class="cursor-pointer">
+                    <p>Promociones</p>
+                </div>
+                <div class="cursor-pointer">
+                    <p>Blog</p>
+                </div>
+            </div>
+            <div>
+                <img src="/images/membership_logo.png" alt="membership">
+            </div>
+        </div>
+    </div>
+</nav>
