--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -48,18 +48,20 @@
                     <img class="mt-1" src="/images/punto_de_flecha_a_la_derecha_1.svg" alt="flecha">
                 </div>
                 <div class="flex items-center cursor-pointer">
-                    <p class="ml-1 mr-2">Servicios</p>
+                    <a class="ml-1 mr-2" href="#">Servicios</a>
                     <img class="mt-1" src="/images/punto_de_flecha_a_la_derecha_1.svg" alt="flecha">
                 </div>
                 <div class="cursor-pointer">
-                    <p>Promociones</p>
+                    <a href="#">Promociones</a>
                 </div>
                 <div class="cursor-pointer">
-                    <p>Blog</p>
+                    <a href="#">Blog</a>
                 </div>
             </div>
             <div>
-                <img src="/images/membership_logo.png" alt="membership">
+                <a href="#">
+                    <img src="/images/membership_logo.png" alt="membership">
+                </a>
             </div>
         </div>
     </div>
