--- a/layouts/index.html
+++ b/layouts/index.html
@@ -25,6 +25,59 @@
     <!-- If we need pagination -->
     <div class="swiper-pagination"></div>
 </div>
+<section class="py-2 lg:py-4 xl:py-6">
+    <div class="mx-auto w-11/12 lg:w-10/12 max-w-screen-2xl">
+        <h2 class="font-bold text-lg xl:text-xl">Categorías</h2>
+        <div class="swiper2 border-b-2 border-grey py-10 px-8 lg:p-8 2xl:py-10 2xl:px-8 overflow-x-hidden">
+            <!-- Additional required wrapper -->
+            <div class="swiper-wrapper">
+                <!-- Slides -->
+                <div class="swiper-slide">
+                    <a class="font-bold grid place-items-center" href="#">
+                        <img class="w-24 h-24 rounded-full" src="/images/navidad.jpeg" alt="navidad">
+                        <p class="mt-1">Navidad</p>
+                    </a>
+                </div>
+                <div class="swiper-slide">
+                    <a class="font-bold grid place-items-center text-center" href="#">
+                        <img class="w-24 h-24 rounded-full" src="/images/alimento.png" alt="alimento">
+                        <p class="mt-1">Alimento</p>
+                    </a>
+                </div>
+                <div class="swiper-slide">
+                    <a class="font-bold grid place-items-center text-center" href="#">
+                        <img class="w-24 h-24 rounded-full" src="/images/snacks.png" alt="snacks">
+                        <p class="mt-1">Snacks</p>
+                    </a>
+                </div>
+                <div class="swiper-slide">
+                    <a class="font-bold grid place-items-center text-center" href="#">
+                        <img class="w-24 h-24 rounded-full" src="/images/farmapet.png" alt="farmapet">
+                        <p class="mt-1">farmapet</p>
+                    </a>
+                </div>
+                <div class="swiper-slide">
+                    <a class="font-bold grid place-items-center text-center" href="#">
+                        <img class="w-24 h-24 rounded-full" src="/images/cuidado-higiene.png" alt="cuidado higiene">
+                        <p class="mt-1">Cuidado e higiene</p>
+                    </a>
+                </div>
+                <div class="swiper-slide">
+                    <a class="font-bold grid place-items-center text-center" href="#">
+                        <img class="w-24 h-24 rounded-full" src="/images/juguetes.png" alt="juguetes">
+                        <p class="mt-1">Juguetes</p>
+                    </a>
+                </div>
+                <div class="swiper-slide">
+                    <a class="font-bold grid place-items-center text-center" href="#">
+                        <img class="w-24 h-24 rounded-full" src="/images/accesorios.png" alt="Accesorios">
+                        <p class="mt-1">Accesorios</p>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 {{ end }}
 {{ define "head" }}
 <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
