--- a/layouts/index.html
+++ b/layouts/index.html
@@ -25,10 +25,10 @@
     <!-- If we need pagination -->
     <div class="swiper-pagination"></div>
 </div>
-<section class="py-2 lg:py-4 xl:py-6">
-    <div class="mx-auto w-11/12 lg:w-10/12 max-w-screen-2xl">
+<section>
+    <div class="mx-auto w-11/12 lg:w-10/12 max-w-screen-2xl border-b-2 border-grey py-6">
         <h2 class="font-bold text-lg xl:text-xl">Categorías</h2>
-        <div class="swiper2 border-b-2 border-grey py-10 px-8 lg:p-8 2xl:py-10 2xl:px-8 overflow-x-hidden">
+        <div class="swiper2 overflow-x-hidden px-8 2xl:px-8 mt-10">
             <!-- Additional required wrapper -->
             <div class="swiper-wrapper">
                 <!-- Slides -->
@@ -74,6 +74,66 @@
                         <p class="mt-1">Accesorios</p>
                     </a>
                 </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section>
+    <div class="mx-auto w-11/12 lg:w-10/12 max-w-screen-2xl border-b-2 border-grey py-6">
+        <h2 class="font-bold text-lg xl:text-xl">Encuentra todo para tus peludos en un solo lugar</h2>
+        <div class="mx-auto w-11/12 xl:w-10/12">
+            <div class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-y-8 lg:gap-x-8 xl:gap-x-12 mt-8 lg:mt-10">
+                <div class="text-center">
+                    <img class="mx-auto w-16 h-16 rounded-full" src="/images/delivery.png" alt="delivery">
+                    <h3 class="xl:text-lg font-bold mt-1">Entregas el mismo día</h3>
+                    <p class="font-bold text-sm mt-1">Entregamos todo lo que necesitas, cuando lo necesitas</p>
+                </div>
+                <div class="text-center">
+                    <img class="mx-auto w-16 h-16 rounded-full" src="/images/secure_payment.png" alt="secure payment">
+                    <h3 class="xl:text-lg font-bold mt-1">Pago online o contra entrega</h3>
+                    <p class="font-bold text-sm mt-1">Escoge tu método de pago.¡No te preocupes! contamos con pasarelas
+                        de pagos certificadas y seguras</p>
+                </div>
+                <div
+                    class="text-center md:col-start-1 md:col-end-3 lg:col-start-1 lg:col-end-3 xl:col-start-3 xl:col-end-4">
+                    <img class="mx-auto w-16 h-16 rounded-full" src="/images/all_for_pets.png" alt="all for pets">
+                    <h3 class="xl:text-lg font-bold mt-1">Todo lo que necesitas</h3>
+                    <p class="font-bold text-sm mt-1">Contamos con más de 4.000 productos y servicios. Encuentra todo lo
+                        que necesitas para tu peludo</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section>
+    <div class="mx-auto w-11/12 lg:w-10/12 max-w-screen-2xl border-b-2 border-grey py-6">
+        <h2 class="font-bold text-lg xl:text-xl">¡Más de 100 marcas disponibles!</h2>
+        <div class="mx-auto w-11/12 xl:w-10/12">
+            <div class="grid grid-cols-2 md:grid-cols-12 lg:grid-cols-4 mt-10">
+                <a class="border border-grey p-6 md:col-start-1 md:col-end-5 lg:col-start-1 lg:col-end-2" href="#">
+                    <img class="mx-auto w-32 h-32" src="/images/hills_circulo4.png" alt="hills">
+                </a>
+                <a class="border border-grey p-6 md:col-start-5 md:col-end-9 lg:col-start-2 lg:col-end-3" href="#">
+                    <img class="mx-auto w-32 h-32" src="/images/WHOLE_BARF.png" alt="WHOLE BARF">
+                </a>
+                <a class="border border-grey p-6 md:col-start-9 md:col-end-13 lg:col-start-3 lg:col-end-4" href="#">
+                    <img class="mx-auto w-32 h-32" src="/images/SALVAJE__FOOD.png" alt="SALVAJE FOOD">
+                </a>
+                <a class="border border-grey p-6 md:col-start-1 md:col-end-5 lg:col-start-4 lg:col-end-5" href="#">
+                    <img class="mx-auto w-32 h-32" src="/images/CANITO.png" alt="CANITO">
+                </a>
+                <a class="border border-grey p-6 md:col-start-5 md:col-end-9 lg:col-start-1 lg:col-end-2" href="#">
+                    <img class="mx-auto w-32 h-32" src="/images/total_max_circulo2.png" alt="total max">
+                </a>
+                <a class="border border-grey p-6 md:col-start-9 md:col-end-13 lg:col-start-2 lg:col-end-3" href="#">
+                    <img class="mx-auto w-32 h-32" src="/images/EQUILIBRIO_CIRCULO2.png" alt="EQUILIBRIO">
+                </a>
+                <a class="border border-grey p-6 md:col-start-3 md:col-end-7 lg:col-start-3 lg:col-end-4" href="#">
+                    <img class="mx-auto w-32 h-32" src="/images/eukanuba_circulo1.png" alt="eucanuba">
+                </a>
+                <a class="border border-grey p-6 md:col-start-7 md:col-end-11 lg:col-start-4 lg:col-end-5" href="#">
+                    <img class="mx-auto w-32 h-32" src="/images/ROYAL_CANIN.png" alt="ROYAL CANIN">
+                </a>
             </div>
         </div>
     </div>
