add new content

--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -33,7 +33,7 @@
         </div>
     </div>
 </header>
-<nav class="py-1 bg-white">
+<nav class="py-1 bg-white shadow-md">
     <div class="mx-auto w-11/12 lg:w-10/12 max-w-screen-2xl">
         <div class="flex items-center justify-between text-purple font-bold">
             <div class="flex items-center space-x-6">
