--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,3 +1,131 @@
-<footer>
-    FOOTER
+<footer class="py-12">
+    <div class="mx-auto w-11/12 xl:w-10/12 max-w-screen-2xl">
+        <div class="grid grid-cols-1 lg:grid-cols-5 text-purple gap-y-8">
+            <div class="text-center">
+                <img class="mx-auto" src="/images/LAIKA.png" alt="laika">
+                <p class="font-bold">Síguenos en:</p>
+                <div class="flex splace-x-1 justify-center">
+                    <a href="#">
+                        <i class="fab fa-youtube text-purple text-4xl"></i>
+                        <i class="fab fa-instagram text-purple text-4xl"></i>
+                        <i class="fab fa-facebook-square text-purple text-4xl"></i>
+                    </a>
+                </div>
+            </div>
+            <div>
+                <h3 class="uppercase font-bold text-sm lg:text-lg">Acerca de laika</h3>
+                <ul class="text-sm font-bold hidden lg:grid gap-y-2 mt-2">
+                    <li><a href="#">Sobre laika</a></li>
+                    <li><a href="#">Servicios</a></li>
+                    <li><a href="#">Trabaja con nostros</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Términos y condices</a></li>
+                </ul>
+            </div>
+            <div>
+                <h3 class="uppercase font-bold text-sm lg:text-lg">LINKS DE INTERÉS</h3>
+                <ul class="text-sm font-bold hidden lg:grid gap-y-2 mt-2">
+                    <li><a href="#">Preguntas frecuentes</a></li>
+                    <li><a href="#">¿Cómo comprar en Laika?</a></li>
+                    <li><a href="#">Política de Privacidad</a></li>
+                    <li><a href="#">Contáctanos</a></li>
+                    <li><a href="#">Políticas de Entrega</a></li>
+                </ul>
+            </div>
+            <div>
+                <h3 class="uppercase font-bold text-sm lg:text-lg">INFORMACIÓN</h3>
+                <ul class="text-sm font-bold hidden lg:grid gap-y-2 mt-2">
+                    <li><a href="#">Teléfono: 3009108496</a></li>
+                    <li><a href="#">servicioclientes@laika.com.co</a></li>
+                    <li><a href="#">Bogotá D.C., Colombia</a></li>
+                </ul>
+            </div>
+            <div class="hidden lg:block">
+                <h3 class="uppercase font-bold text-sm lg:text-lg">SUSCRÍBETE</h3>
+                <p class="pt-1 text-xs font-bold">Recibe noticias y promociones al instante.</p>
+                <form class="mt-2" action="#" method="post">
+                    <div class="flex items-center">
+                        <input
+                            class="text-sm font-bold text-purple focus:outline-none border border-black w-11/12 py-2 px-4 rounded-lg"
+                            type="email" placeholder="Correo electrónico" required>
+                        <button class="bg-purple w-7 h-7 rounded-lg -ml-8">
+                            <i class="fas fa-angle-right text-white"></i>
+                        </button>
+                    </div>
+                    <div class="flex mt-2">
+                        <input class="mr-2" type="checkbox" name="acept" id="acept">
+                        <label class="font-bold text-xs leading-none italic" for="acept">He leído y acepto las políticas
+                            de privacidad.</label>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 </footer>
+<div class="py-2 bg-grey">
+    <div class="mx-auto w-11/12 xl:w-10/12 max-w-screen-2xl">
+        <div class="grid grid-cols-1 lg:grid-cols-3">
+            <div>
+                <p class="font-black text-sm">Pago 100% seguro <span class="ml-2" style="color: #00D95F;"><i
+                            class="fas fa-lock"></i> SSL</span></p>
+                <p class="text-gray-400 leading-none mt-1" style="font-size: 10px;">Este certificado garantiza la
+                    seguridad de todas <span class="block">tus conexiones
+                        mediante cifrado.</span>
+                </p>
+                <div class="flex items-center mt-2 space-x-2">
+                    <div class="border border-gray-300 bg-grey">
+                        <img class="mx-auto" src="/images/Mercado_pago.png" alt="Mercado_pago"
+                            style="width: 35px; height: 21px;">
+                    </div>
+                    <div class="border border-gray-300 bg-grey">
+                        <img class="mx-auto" src="/images/epayco.png" alt="epayco" style="width: 35px; height: 21px;">
+                    </div>
+                    <div class="border border-gray-300 bg-grey">
+                        <img class="mx-auto" src="/images/PSE.png" alt="PSE" style="width: 35px; height: 21px;">
+                    </div>
+                    <div class="border border-gray-300 bg-grey">
+                        <img class="mx-auto" src="/images/VISA.png" alt="VISA" style="width: 35px; height: 21px;">
+                    </div>
+                    <div class="border border-gray-300 bg-grey">
+                        <img class="mx-auto" src="/images/MASTER.png" alt="MASTER" style="width: 35px; height: 21px;">
+                    </div>
+                    <div class="border border-gray-300 bg-grey">
+                        <img class="mx-auto" src="/images/AMERICAN.png" alt="AMERICAN"
+                            style="width: 35px; height: 21px;">
+                    </div>
+                    <div class="border border-gray-300 bg-grey">
+                        <img class="mx-auto" src="/images/DINERS.png" alt="dinners" style="width: 35px; height: 21px;">
+                    </div>
+                    <div class="border border-gray-300 bg-grey">
+                        <img class="mx-auto" src="/images/kushki.svg" alt="kushki" style="width: 35px; height: 21px;">
+                    </div>
+                </div>
+            </div>
+            <div class="flex items-center justify-center">
+                <img src="/images/proteccion.svg" alt="proteccion">
+                <p class="ml-2 font-bold">Protección segura 24/7</p>
+            </div>
+            <div class="flex flex-wrap items-center justify-center pb-2">
+                <a href="#">
+                    <img class="h-12" src="/images/APP.png" alt="app">
+                </a>
+                <a href="#">
+                    <img class="h-12" src="/images/GOOGLEP.png" alt="google">
+                </a>
+                <a href="#">
+                    <img class="h-12" src="/images/huaweiGallery.png" alt="huawey">
+                </a>
+            </div>
+            <div class="lg:col-start-1 lg:col-end-4 pt-1 border-t-2 border-white">
+                <div class="mx-auto w-10/12">
+                    <p class="text-center">
+                        https://www.sic.gov.co / Proyecto E S.A.S. / NIT: 901.110.407 -4 / Dirección de notificación
+                        judicial: Cra 68G No. 74B - 56, Bogotá DC
+                        Teléfono: 300 9108496 / Correo electrónico para notificación judicial: contabilidad@laika.com.co
+                    </p>
+                    <p class="mt-4 text-center text-xs">Copyright © 2021 LAIKA - Derechos reservados</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
