--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -1,5 +1,5 @@
 <header class="bg-purple pt-3 pb-4">
-    <div class="mx-auto w-11/12 lg:w-10/12 max-w-screen-2xl">
+    <div class="mx-auto w-11/12 xl:w-10/12 max-w-screen-2xl">
         <div class="grid grid-cols-12 items-center">
             <div class="col-start-1 col-end-2">
                 <a href="#">
@@ -34,7 +34,7 @@
     </div>
 </header>
 <nav class="py-1 bg-white shadow-md">
-    <div class="mx-auto w-11/12 lg:w-10/12 max-w-screen-2xl">
+    <div class="mx-auto w-11/12 xl:w-10/12 max-w-screen-2xl">
         <div class="flex items-center justify-between text-purple font-bold">
             <div class="flex items-center space-x-6">
                 <div class="flex items-center hover:bg-grey rounded-md pr-2 duration-300 cursor-pointer">
