add menu nav mobile

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -25,6 +25,11 @@
                     <img src="/images/banner-4.png" alt="banner 4">
                 </a>
             </div>
+            <div class="swiper-slide">
+                <a href="#">
+                    <img src="/images/banner-5.jpg" alt="banner 5">
+                </a>
+            </div>
         </div>
 
         <!-- If we need navigation buttons -->
