--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -1,6 +1,7 @@
 <header class="bg-purple pt-3 pb-4">
     <div class="mx-auto w-11/12 xl:w-10/12 max-w-screen-2xl">
-        <div class="grid grid-cols-12 items-center">
+        {{/* DESKTOP */}}
+        <div class="hidden xl:grid grid-cols-12 items-center gap-x-10">
             <div class="col-start-1 col-end-2">
                 <a href="#">
                     <img src="/images/LaikaMascotas.svg" alt="Logo">
@@ -15,7 +16,7 @@
                         placeholder="¿Qué necesita tu mascota?">
                 </div>
             </div>
-            <div class="col-start-10 col-end-13">
+            <div class="col-start-9 col-end-13">
                 <div class="flex items-center text-white font-bold text-sm justify-between">
                     <div class="flex items-center cursor-pointer">
                         <p class="mr-3">Agregar dirección</p>
@@ -31,11 +32,53 @@
                 </div>
             </div>
         </div>
+        {{/* DESKTOP END */}}
+
+        {{/* MOBILE */}}
+        <div class="flex items-center justify-between flex-wrap xl:hidden">
+            <div class="flex items-center text-white space-x-8">
+                <div class="cursor-pointer w-6" id="btn-menu">
+                    <i class="fas fa-bars text-3xl text-white h-0" id="icon-menu"></i>
+                </div>
+                <div class="flex items-center cursor-pointer">
+                    <p class="mr-3 font-bold text-xs">Agregar dirección</p>
+                    <img src="/images/arrow_down_custom.svg" alt="arrow down">
+                </div>
+            </div>
+            <div class="flex items-center">
+                <a href="#">
+                    <img class="h-12" src="/images/LaikaMascotas.svg" alt="Logo">
+                </a>
+            </div>
+            <div class="flex space-x-4">
+                <div class="md:hidden bg-purple-dark rounded-full grid place-items-center p-1 cursor-pointer">
+                    <img src="/images/profile_mc.svg" alt="profile">
+                </div>
+                <div class="hidden md:flex items-center text-white cursor-pointer bg-purple-dark p-2 rounded-md">
+                    <p class="mr-3">Crear cuenta</p>
+                    <img src="/images/arrow_down_custom.svg" alt="arrow down">
+                </div>
+                <div class="bg-purple-light rounded-full grid place-items-center p-1 cursor-pointer">
+                    <img src="/images/cart_mc.svg" alt="cart">
+                </div>
+            </div>
+            <div class="w-full mt-4">
+                <div class="relative">
+                    <button class="absolute top-1/2 left-2 transform -translate-y-1/2">
+                        <img src="/images/search_icon_mc.svg" alt="search">
+                    </button>
+                    <input class="py-2 px-10 rounded-md w-full focus:outline-none" type="text"
+                        placeholder="¿Qué necesita tu mascota?">
+                </div>
+            </div>
+        </div>
+        {{/* MOBILE END */}}
     </div>
 </header>
-<nav class="py-1 bg-white shadow-md">
+<nav class="bg-white shadow-md relative">
     <div class="mx-auto w-11/12 xl:w-10/12 max-w-screen-2xl">
-        <div class="flex items-center justify-between text-purple font-bold">
+        {{/* DESKTOP */}}
+        <div class="hidden xl:flex items-center justify-between text-purple font-bold py-1">
             <div class="flex items-center space-x-6">
                 <div class="flex items-center hover:bg-grey rounded-md pr-2 duration-300 cursor-pointer">
                     <img src="/images/dog_mc.svg" alt="">
@@ -64,5 +107,56 @@
                 </a>
             </div>
         </div>
+        {{/* DESKTOP END */}}
+
+        {{/* MOBILE */}}
+        <div class="fixed -left-full w-full h-screen duration-300 bg-white py-2 px-4 xl:hidden z-50" id="nav-menu" style="top: 131px;">
+            <div class="flex items-center justify-between pb-2 border-b border-purple cursor-pointer">
+                <div class="flex items-center">
+                    <img src="/images/dog_mc.svg" alt="dog">
+                    <p class="ml-2 font-bold">Perro</p>
+                </div>
+                <div>
+                    <i class="fas fa-angle-right text-2xl"></i>
+                </div>
+            </div>
+            <div class="flex items-center justify-between pb-2 border-b border-purple cursor-pointer mt-2">
+                <div class="flex items-center">
+                    <img src="/images/cat_mc_s.svg" alt="cat">
+                    <p class="ml-2 font-bold">Gato</p>
+                </div>
+                <div>
+                    <i class="fas fa-angle-right text-2xl"></i>
+                </div>
+            </div>
+            <div class="flex items-center justify-between pb-2 border-b border-purple cursor-pointer mt-2">
+                <div class="flex items-center">
+                    <img class="w-10 h-10" src="/images/servicios.png" alt="servicios">
+                    <p class="ml-2 font-bold">Servicios</p>
+                </div>
+                <div>
+                    <i class="fas fa-angle-right text-2xl"></i>
+                </div>
+            </div>
+            <div class="flex items-center justify-between pb-2 border-b border-purple cursor-pointer mt-2">
+                <div class="flex items-center">
+                    <img class="w-10 h-10" src="/images/promociones.png" alt="promociones">
+                    <p class="ml-2 font-bold">Promociones</p>
+                </div>
+                <div>
+                    <i class="fas fa-angle-right text-2xl"></i>
+                </div>
+            </div>
+            <div class="flex items-center justify-between pb-2 border-b border-purple cursor-pointer mt-2">
+                <div class="flex items-center">
+                    <img class="w-10 h-10" src="/images/blog.png" alt="blog">
+                    <p class="ml-2 font-bold">Blog</p>
+                </div>
+                <div>
+                    <i class="fas fa-angle-right text-2xl"></i>
+                </div>
+            </div>
+        </div>
+        {{/* MOBILE END */}}
     </div>
 </nav>
