--- a/layouts/partials/topbar.html
+++ b/layouts/partials/topbar.html
@@ -1,4 +1,4 @@
-<div class="hidden lg:block bg-purple text-white py-1">
+<div class="hidden xl:block bg-purple text-white py-1">
     <div class="mx-auto lg:w-11/12 xl:w-10/12 max-w-screen-2xl">
         <div class="flex items-center justify-between">
             <div class="flex items-center space-x-1">
