add social media

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -62,9 +62,9 @@
         </div>
     </div>
 </footer>
-<div class="py-2 bg-grey">
+<div class="py-6 xl:py-2 bg-grey">
     <div class="mx-auto w-11/12 xl:w-10/12 max-w-screen-2xl">
-        <div class="grid grid-cols-1 lg:grid-cols-3">
+        <div class="grid grid-cols-1 lg:grid-cols-3 gap-y-4">
             <div>
                 <p class="font-black text-sm">Pago 100% seguro <span class="ml-2" style="color: #00D95F;"><i
                             class="fas fa-lock"></i> SSL</span></p>
