--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -16,6 +16,11 @@
         {{ block "main" . }}{{ end }}
     </main>
     {{ partial "footer" . }}
+    <div class="fixed bottom-6 right-6 bg-white p-2 rounded-full shadow-xl">
+        <a href="#">
+            <img class="h-10 w-10" src="/images/whatsapp_1.png" alt="social media">
+        </a>
+    </div>
     {{ $default := resources.Get "js/default.js" | js.Build (dict "minify" true)}}
     <script src="{{ $default.Permalink }}"></script>
     {{ block "js" . }}{{ end }}
