--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,4 +1,21 @@
 {{ define "main" }}
+<div class="py-2 lg:hidden">
+    <div class="mx-auto w-6/12">
+        <div class="grid grid-cols-2 gap-2">
+            <div class="flex items-center justify-between p-2 pl-4 text-white bg-purple rounded-xl border border-grey">
+                <p class="font-bold">Perro</p>
+                <img src="/images/dog_mc.svg" alt="dog">
+            </div>
+            <div class="flex items-center justify-between p-2 pl-4 rounded-xl border border-grey">
+                <p class="font-bold">Gato</p>
+                <img src="/images/cat_mc_s.svg" alt="cat">
+            </div>
+            <div class="col-start-1 col-end-3">
+                <img class="mx-auto" src="/images/membership_logo.png" alt="laika member">
+            </div>
+        </div>
+    </div>
+</div>
 <div class="mx-auto max-w-screen-2xl">
     <!-- Slider main container -->
     <div class="swiper">
