--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -40,13 +40,13 @@
                     <li><a href="#">Bogotá D.C., Colombia</a></li>
                 </ul>
             </div>
-            <div class="hidden lg:block">
+            <div>
                 <h3 class="uppercase font-bold text-sm lg:text-lg">SUSCRÍBETE</h3>
                 <p class="pt-1 text-xs font-bold">Recibe noticias y promociones al instante.</p>
                 <form class="mt-2" action="#" method="post">
                     <div class="flex items-center">
                         <input
-                            class="text-sm font-bold text-purple focus:outline-none border border-black w-11/12 py-2 px-4 rounded-lg"
+                            class="text-sm font-bold text-purple focus:outline-none border border-black w-full lg:w-11/12 py-2 px-4 rounded-lg"
                             type="email" placeholder="Correo electrónico" required>
                         <button class="bg-purple w-7 h-7 rounded-lg -ml-8">
                             <i class="fas fa-angle-right text-white"></i>
@@ -101,11 +101,11 @@
                     </div>
                 </div>
             </div>
-            <div class="flex items-center justify-center">
+            <div class="flex items-center justify-center ">
                 <img src="/images/proteccion.svg" alt="proteccion">
                 <p class="ml-2 font-bold">Protección segura 24/7</p>
             </div>
-            <div class="flex flex-wrap items-center justify-center pb-2">
+            <div class="hidden lg:flex flex-wrap items-center justify-center pb-2">
                 <a href="#">
                     <img class="h-12" src="/images/APP.png" alt="app">
                 </a>
@@ -117,7 +117,7 @@
                 </a>
             </div>
             <div class="lg:col-start-1 lg:col-end-4 pt-1 border-t-2 border-white">
-                <div class="mx-auto w-10/12">
+                <div class="mx-auto lg:w-10/12">
                     <p class="text-center">
                         https://www.sic.gov.co / Proyecto E S.A.S. / NIT: 901.110.407 -4 / Dirección de notificación
                         judicial: Cra 68G No. 74B - 56, Bogotá DC
